crates/zendriver-mcp/tests/snapshots/schema_snapshots__actions_clear_in.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::actions::ClearInput)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: ClearInput
description: "Input for `browser_clear`."
type: object
properties:
  css:
    type:
      - string
      - "null"
  frame_id:
    type:
      - string
      - "null"
  mode:
    description: "Clearing strategy. Default `value`."
    $ref: "#/$defs/ClearMode"
    default: value
  nth:
    type:
      - integer
      - "null"
    format: uint
    minimum: 0
  return_snapshot:
    description: "When `true`, include the trimmed page HTML in the response."
    type: boolean
    default: false
  role:
    type:
      - string
      - "null"
  role_name:
    type:
      - string
      - "null"
  text:
    type:
      - string
      - "null"
  text_exact:
    type:
      - string
      - "null"
  text_regex:
    type:
      - string
      - "null"
  timeout_ms:
    type: integer
    format: uint64
    default: 5000
    minimum: 0
  visible_only:
    type: boolean
    default: true
  xpath:
    type:
      - string
      - "null"
additionalProperties: false
$defs:
  ClearMode:
    description: "How `browser_clear` empties an element."
    oneOf:
      - description: "Reset `.value` to empty + fire `input` (fast). Default."
        type: string
        const: value
      - description: "Focus + select-all + Backspace (emits real key events some inputs\nrequire). Slower but more faithful to user behavior."
        type: string
        const: backspace
